Many changes to bring it up to production ready.
So long as your production is set to standalone, and only uses standalone.xml
All tests pass.

Major changes include:

chef manages standalone.conf for setting JAVA_OPTS
moved java install_flavor/jdk_version setting into the recipe.  I never liked it being in attributes anyways, didn't seem proper.